--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "load-data-files": "./scripts/getFiles.sh"
+    "load-data-files": "./scripts/getFiles.sh",
+    "push-data-files": "./scripts/pushFiles.sh",
+    "refresh-data-files": "load-data-files && push-data-files"
   },
   "eslintConfig": {
     "extends": [
