--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,6 +5,6 @@ on:
     - cron: "* * * * *"
 jobs:
   Explore-GitHub-Actions:
-    runs-on: main
+    runs-on: ubuntu-latest
     steps:
-      - run: npm run data-files
+      - run: echo "Start"
